Kubernetes/debug.yml
apiVersion: v1
kind: Pod
metadata:
  name: debug-container
spec:
  containers:
  - name: debug
    image: busybox
    command:
    - sleep
    - "3600"
    securityContext:
      seccompProfile:
        type: RuntimeDefault
