Kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-app
  labels:
    app: netflix-app
    environment: production
    team: devsecops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netflix-app
  template:
    metadata:
      labels:
        app: netflix-app
        environment: production
        team: devsecops
    spec:
      containers:
      - name: netflix-app
        image: sreedhar8897/netflix:latest
        ports:
        - containerPort: 80
