Kubernetes/node-service.yml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
spec:
  containers:
  - name: netflix-app
    image: nasi101/netflix:latest
    securityContext:
      seccompProfile:
        type: Unconfined
