Kubernetes/Namespace-isolation-policy.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequirednamespace
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredNamespace
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequirednamespace

        violation[{"msg": msg}] {
          input.review.kind.kind == "Deployment" # Only apply the rule to Deployments.
          input.review.object.metadata.namespace != "netflix-app-namespace" # Block if not in netflix-app-namespace.
          msg := sprintf("Deployments must be in the 'netflix-app-namespace' namespace, but found in: %s", [input.review.object.metadata.namespace])
        }

---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredNamespace
metadata:
  name: restrict-namespace
spec:
  match:
    kinds:
      - apiGroups: ["apps"] # Target Deployment resources.
        kinds: ["Deployment"]
