Kubernetes/OPArestrict-image-registry.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedImageRegistry
metadata:
  name: restrict-image-registry
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
