Kubernetes/OPAvalidate-image-registry.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sallowedimageregistry
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedImageRegistry
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sallowedimageregistry

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          some i
          image := input.review.object.spec.containers[i].image
          not startswith(image, "nasi101/")
          msg := sprintf("Container image must originate from the approved registry 'nasi101/': %s", [image])
        }
